@@ -14,6 +14,8 @@
 - warble.rb: Add config.compiled_ruby_files to specify which Ruby
   files to compile when using the "compiled" feature. Defaults to
   compiling all Ruby files.
+- Exclude 'tmp/war' directory by default, so that people upgrading
+  from 0.9 won't accidentally include it in their war file.
 
 == 1.1.0
 
